--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
+    "yet-another-react-lightbox": "^3.25.0",
     "zod": "^4.1.11"
   },
   "devDependencies": {
