--- a/package.json
+++ b/package.json
@@ -43,7 +43,10 @@
     "react-player": "^3.3.3",
     "resend": "^6.1.0",
     "sanity": "^4.10.0",
+    "sanity-plugin-image-asset-picker": "^1.0.1",
+    "sanity-plugin-media": "^4.0.0",
     "sonner": "^2.0.7",
+    "styled-components": "^6.1.19",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "yet-another-react-lightbox": "^3.25.0",
