--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-player": "^3.3.3",
     "resend": "^6.1.0",
     "sanity": "^4.10.0",
+    "sanity-plugin-asset-source-unsplash": "^4.0.1",
     "sanity-plugin-image-asset-picker": "^1.0.1",
     "sanity-plugin-media": "^4.0.0",
     "sonner": "^2.0.7",
