--- a/package.json
+++ b/package.json
@@ -40,11 +40,13 @@
     "react": "19.1.1",
     "react-dom": "19.1.1",
     "react-hook-form": "^7.63.0",
+    "react-masonry-css": "^1.0.16",
     "react-player": "^3.3.3",
     "resend": "^6.1.0",
     "sanity": "^4.10.0",
     "sanity-plugin-asset-source-unsplash": "^4.0.1",
     "sanity-plugin-image-asset-picker": "^1.0.1",
+    "sanity-plugin-lucide-icon-picker": "^1.0.3",
     "sanity-plugin-media": "^4.0.0",
     "sonner": "^2.0.7",
     "styled-components": "^6.1.19",
