--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react": "19.1.1",
     "react-dom": "19.1.1",
     "react-hook-form": "^7.63.0",
+    "react-icons": "^5.5.0",
     "react-masonry-css": "^1.0.16",
     "react-player": "^3.3.3",
     "resend": "^6.1.0",
