Add AI-Powered Alt Text Generation: integrate OpenAI API for generating alt text in Sanity Studio, implement new API routes, and enhance image schemas with alt text fields; update README for setup instructions and usage guidelines.

--- a/.env.local.example
+++ b/.env.local.example
@@ -9,3 +9,6 @@ NEXT_PUBLIC_SANITY_API_VERSION=2024-10-18
 NEXT_PUBLIC_SANITY_PROJECT_ID=
 NEXT_PUBLIC_SANITY_DATASET=development
 SANITY_API_READ_TOKEN=
+
+
+   OPENAI_API_KEY=your_openai_api_key_here
