--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "next": "15.5.4",
     "next-sanity": "^11.1.3",
     "next-themes": "^0.4.6",
+    "openai": "^6.0.1",
     "prism-react-renderer": "^2.4.1",
     "react": "19.1.1",
     "react-dom": "19.1.1",
